--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,7 +29,7 @@ date.format=HH:mm
 # Server configuration
 # ~~~~~
 # If you need to change the HTTP port, uncomment this (default is set to 9000)
- http.port=9001
+ http.port=9002
 #
 # By default the server listen for HTTP on the wilcard address.
 # You can restrict this.
@@ -86,6 +86,7 @@ date.format=HH:mm
 #
 # To connect to a local MySQL5 database, use:
 db=mysql://4_arnezelasko:AZ2145@arnezelasko.de/4_database
+#db=mysql://root@localhost/stundenplan
 %prod.db=mysql://4_arnezelasko:AZ2145@arnezelasko.de/4_database
 #
 # To connect to a local PostgreSQL9 database, use:
